--- a/index.html
+++ b/index.html
@@ -9,24 +9,14 @@
     <section>
       <article>
         <form action="/action_page.php">
-          <h2>Ingrese la cantidad de veces que quieres jugar</h2>
-          <input type="text" id="cantJuegos" />
-          <input
-            type="button"
-            id="cantidad"
-            value="Enviar"
-            onclick="console.log('El resultado es: ' + cantidad );"
-          />
+          <h2>Hola</h2>
+
+      
         </form>
 
-        <!-- <form action="">
-        <input type="text" id="usuario">
-        <input type="button" id="maquina">
-        <input type="button" value="cachipum" onclick="console.log('Los valores son: ' + cachipum() );"> 
-            </form> -->
       </article>
     </section>
 
-    <script src="/assets/script/script.js"></script>
+    <script src="/assets/js/script.js"></script>
   </body>
 </html>
